<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        tools:context=".LoginActivity">

    <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/rounded_input_green"
            android:maxLines="1"
            android:lines="1"
            android:hint="@string/input_username"
            android:inputType="textEmailAddress"/>
    <EditText
            android:id="@+id/input_password"
            android:layout_below="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/rounded_input_green"
            android:maxLines="1"
            android:lines="1"
            android:maxLength="12"
            android:hint="@string/input_password"
            android:inputType="textPassword"/>
    <Button
            android:id="@+id/btn_login"
            android:layout_below="@id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/rounded_button_purple"
            android:text="@string/btn_login"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/raleway_bold"
    />
</RelativeLayout>