<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="35dp"
        tools:context=".MainActivity"
>

    <!--HEADER-->
    <RelativeLayout
            android:id="@+id/header"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/separator"
            android:layout_marginBottom="15dp"
    >
        <TextView
                android:id="@+id/text_username"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/raleway_regular"
        />
        <ImageButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout"
                android:background="@android:color/transparent"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
        />
    </RelativeLayout>

    <!--Watts info-->
    <LinearLayout
            android:id="@+id/watts_atividade"
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/info_atividade"
                android:textSize="16dp"
                android:fontFamily="@font/raleway_regular"
        />
        <TextView
                android:id="@+id/text_diasAtivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textSize="16dp"
                android:fontFamily="@font/raleway_regular"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/watts_recorde"
        android:layout_below="@id/watts_atividade"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/info_recorde"
                android:textSize="16dp"
                android:fontFamily="@font/raleway_regular"
        />

        <TextView
            android:id="@+id/text_recorde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainGreen"
            android:textSize="16dp"
            android:fontFamily="@font/raleway_regular"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/info_missoes"
                android:textSize="16dp"
                android:fontFamily="@font/raleway_regular"
        />

        <TextView
                android:id="@+id/text_missoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainGreen"
                android:textSize="16dp"
                android:fontFamily="@font/raleway_regular"
        />
    </LinearLayout>

    <!--CALL TO ACTION-->
    <Button
        android:id="@+id/btn_callToAction"
        android:layout_below="@id/watts_recorde"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_button_yellow"
        android:text="@string/callToAction"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/raleway_regular"
    />

    <!--MR WATTS-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/btn_callToAction"
    >
        <ImageView
                android:id="@+id/img_watts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
    </LinearLayout>

    <!--MR WATTS GAUGE-->
    <View android:id="@+id/base_gauge"
          android:layout_above="@id/menu"
          android:layout_width="200dp"
          android:layout_height="15dp"
          android:layout_weight="100"
          android:layout_marginLeft="80dp"
          android:layout_marginBottom="40dp"
          android:gravity="center"
          android:background="@drawable/rounded_bar_white"
    />
    <View android:id="@+id/hp_gauge"
          android:layout_above="@id/menu"
          android:layout_width="200dp"
          android:layout_height="15dp"
          android:layout_weight="20"
          android:layout_marginLeft="80dp"
          android:layout_marginBottom="40dp"
          android:background="@drawable/hp_gradient"

    />
    <TextView
            android:id="@+id/points"
            android:layout_above="@id/menu"
            android:layout_toRightOf="@id/base_gauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/mainGreen"
            android:textSize="16dp"
            android:fontFamily="@font/raleway_regular"
    />

    <!--MENU-->
    <LinearLayout
        android:id="@+id/menu"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"

    >
        <ImageButton
                android:id="@+id/btn_missions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_missions"
                android:background="@android:color/transparent"
        />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_home_selected"
                android:layout_marginHorizontal="50dp"
        />
        <ImageButton
                android:id="@+id/btn_inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_inventory"
                android:background="@android:color/transparent"
        />
    </LinearLayout>

</RelativeLayout>