<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="35dp"
        tools:context=".MainActivity"
>

    <!--HEADER-->
    <RelativeLayout
            android:id="@+id/header"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/separator"
            android:layout_marginBottom="15dp"
    >
        <TextView
                android:id="@+id/text_username"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/raleway_regular"
        />
        <ImageButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout"
                android:background="@android:color/transparent"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
        />
    </RelativeLayout>

    <!--MENU-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"

    >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_mission_selected"
        />
        <ImageButton
                android:id="@+id/btn_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_home"
                android:layout_marginHorizontal="50dp"
                android:background="@android:color/transparent"
        />
        <ImageButton
                android:id="@+id/btn_inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_inventory"
                android:background="@android:color/transparent"
        />
    </LinearLayout>

    <!--CONTENT-->

    <LinearLayout android:layout_height="51dp" android:layout_width="686dp"
                  android:orientation="horizontal"
                  android:visibility="visible" tools:visibility="visible"
                  android:baselineAligned="false"
                  android:layout_alignTop="@+id/content_desafio" android:layout_marginTop="-59dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="@string/titulo_desafio"
                android:textSize="20dp"
                android:fontFamily="@font/raleway_regular"
                android:layout_alignTop="@+id/null" android:layout_alignStart="@+id/null"
                android:textStyle="bold|italic" android:textAlignment="center" android:layout_alignBottom="@+id/null"/>
    </LinearLayout>



        <RelativeLayout android:layout_height="83dp" android:layout_width="match_parent"
                        android:visibility="visible" tools:visibility="visible"
                        android:baselineAligned="false" android:id="@+id/content_desafio"
                        android:layout_marginTop="49dp"
                        android:layout_below="@+id/header">

            <ImageView
                    android:id="@+id/img_desafio"
                    android:layout_width="85dp"
                    android:layout_height="75dp"
                    android:src="@drawable/exercise"
                    android:layout_alignStart="@+id/content_desafio" android:layout_alignTop="@+id/content_desafio"/>

            <TextView
                    android:id="@+id/descricao_desafio"
                    android:layout_width="273dp"
                    android:layout_height="47dp"
                    android:textColor="@color/white"
                    android:text="@string/ds_desafio"
                    android:textSize="16dp"
                    android:fontFamily="@font/raleway_regular"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="10dp"
                    />
            <ImageView
                    android:layout_width="19dp"
                    android:layout_height="22dp"
                    android:src="@drawable/heart"
                    android:visibility="visible" android:contentDescription="points" android:id="@+id/pointimg"
                    android:layout_marginEnd="19dp"
                    android:layout_alignParentBottom="true" android:layout_marginBottom="6dp"
                    android:layout_alignParentEnd="true"/>
            <TextView
                    android:text="@string/ds_cooldown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:layout_marginBottom="8dp" android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="150dp"
                    android:textColor="@color/white" android:textSize="15dp" android:fontFamily="@font/raleway_regular"
            />
            <TextView
                    android:id="@+id/points"
                    android:layout_width="45dp"
                    android:layout_height="18dp"
                    android:inputType="number"
                    android:text="21"
                    android:ems="10"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="41dp"
                    android:layout_alignParentBottom="true" android:layout_marginBottom="10dp"
                    android:textColor="@color/white" android:textSize="15dp" android:fontFamily="@font/raleway_regular"
                    android:textAlignment="textEnd"/>
            <TextView
                    android:id="@+id/dias_cooldown"
                    android:layout_width="49dp"
                    android:layout_height="17dp"
                    android:inputType="number"
                    android:ems="10"
                    android:layout_alignParentBottom="true"
                    android:text="21"
                    android:layout_marginBottom="11dp"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="98dp"
                    android:textColor="@color/white" android:textSize="15dp" android:fontFamily="@font/raleway_regular"
            />
        </RelativeLayout>


</RelativeLayout>